--- a/Admin/build.gradle
+++ b/Admin/build.gradle
@@ -19,8 +19,12 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
-    }
+        maven {
+               url 'https://maven.google.com'
+             }
+
+        }
+
 }
 
 task clean(type: Delete) {
